--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
+* { 
+  background-color: black;
+}
+
+h1 {
+  padding: 15px;
+  font-size: 3em;
+  color: white;
+/*   color: green; */
+  text-shadow: 3px 3px 1px rgb(9, 164, 238);
+  font-family: 'Goldman', cursive;
+  font-weight: bolder;
+}
+
+a {
+  text-align: right;
+  font-family: 'Goldman', cursive;
+/*   color: rgb(190, 37, 231); */
+  color: rgb(9, 164, 238);
+  text-decoration: none;
+  font-size: 1.5em;
+  padding: 15px;
+  text-shadow: 1px 3px 5px gray;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: gray;
+  text-shadow: 1px 3px 5px green;
+}
+
+img {
+  width: 100%;
+/*   height: 75%; */
+  overflow: hidden;
+/*   margin-left: 25%; */
+}
+
+.fa {
+  padding: 20px;
+  font-size: 2em;
+  width: 3em;
+  text-align: center;
+  text-decoration: none;
+}
+
+h2, h3, p {
+  padding: 15px;
+  font-size: 2em;
+  color: white;
+  text-shadow: 3px 3px 1px green;
+  font-family: 'Goldman', cursive;
+  font-weight: bolder;
+}
+
+footer, header {
+/*   background-color: teal; */
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+hr {
+  height: 5px;
+  box-shadow: 2px 2px 2px white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
