--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * { 
   background-color: black;
+  font-family: 'Orbitron', sans-serif;
 }
 
 h1 {
@@ -8,13 +9,15 @@ h1 {
   color: white;
 /*   color: green; */
   text-shadow: 3px 3px 1px rgb(9, 164, 238);
-  font-family: 'Goldman', cursive;
+  /* font-family: 'Goldman', cursive; */
+  font-family: 'Orbitron', sans-serif;
   font-weight: bolder;
 }
 
 a {
   text-align: right;
-  font-family: 'Goldman', cursive;
+  /* font-family: 'Goldman', cursive; */
+  font-family: 'Orbitron', sans-serif;
 /*   color: rgb(190, 37, 231); */
   color: rgb(9, 164, 238);
   text-decoration: none;
@@ -49,7 +52,8 @@ h2, h3 {
   font-size: 2em;
   color: white;
   text-shadow: 3px 3px 1px green;
-  font-family: 'Goldman', cursive;
+  /* font-family: 'Goldman', cursive; */
+  font-family: 'Orbitron', sans-serif;
   font-weight: bolder;
 }
 
@@ -60,7 +64,8 @@ p {
   font-size: 1.25em;
   color: white;
   text-shadow: 3px 3px 1px green;
-  font-family: 'Goldman', cursive;
+  /* font-family: 'Goldman', cursive; */
+  font-family: 'Orbitron', sans-serif;
   font-weight: bolder;
 }
 
