--- a/src/App.css
+++ b/src/App.css
@@ -10,14 +10,16 @@ h1 {
 /*   color: green; */
   text-shadow: 3px 3px 1px rgb(9, 164, 238);
   /* font-family: 'Goldman', cursive; */
-  font-family: 'Orbitron', sans-serif;
+  /* font-family: 'Orbitron', sans-serif; */
+  font-family: 'Audiowide', cursive;
   font-weight: bolder;
 }
 
 a {
   text-align: right;
   /* font-family: 'Goldman', cursive; */
-  font-family: 'Orbitron', sans-serif;
+  /* font-family: 'Orbitron', sans-serif; */
+  font-family: 'Audiowide', cursive;
 /*   color: rgb(190, 37, 231); */
   color: rgb(9, 164, 238);
   text-decoration: none;
@@ -47,14 +49,23 @@ a:hover {
   text-decoration: none;
 }
 
-h2, h3 {
+h2 {
+  padding: 15px;
+  font-size: 2em;
+  color: white;
+  font-family: 'Audiowide', cursive;
+  text-shadow: 3px 3px 1px green;
+  /* font-family: 'Goldman', cursive; */
+  /* font-family: 'Orbitron', sans-serif; */
+  font-weight: bolder;
+}
+
+h3 {
+  font-family: 'Audiowide', cursive;
   padding: 15px;
   font-size: 2em;
   color: white;
   text-shadow: 3px 3px 1px green;
-  /* font-family: 'Goldman', cursive; */
-  font-family: 'Orbitron', sans-serif;
-  font-weight: bolder;
 }
 
 p {
