added projects page and created project compontent

--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@ p {
   /* padding: 15px; */
   font-size: 1.25em;
   color: white;
-  text-shadow: 3px 3px 1px green;
+  /* text-shadow: 3px 3px 1px green; */
   /* font-family: 'Goldman', cursive; */
   font-family: 'Orbitron', sans-serif;
   font-weight: bolder;
